# ROS-2-Interface-for-RFT-Series-EtherCAT-Model

./: README.md
rft_ethercat_ros2_interface/: CMakeLists.txt  package.xml
rft_ethercat_ros2_interface/install/: local_setup.sh  setup.sh
rft_ethercat_ros2_interface/script/: config.txt  interface.py
