<?xml version="1.0"?>
<package format="3">
  <name>rft_ros2_interface</name>
  <version>0.0.1</version>
  <description>ROS 2 interface for RFT</description>

  <maintainer email="dkkim@robotous.com">Dokyeong Kim</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
